--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{{ path("product_index") }}">Product</a></li>
         <li><a href="{{ path("user_index") }}">User</a></li>
-        <li><a href="#">Bug</a></li>        
+        <li><a href="{{ path("bug_index") }}">Bug</a></li>        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
