--- a/app/Resources/views/bug/index.html.twig
+++ b/app/Resources/views/bug/index.html.twig
@@ -1,33 +1,58 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Bug list</h1>
+	<h1>Bug list</h1>
 
-    <table class="table table-striped table-hover table-bordered">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Description</th>
-                <th>Created</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for bug in bugs %}
-            <tr>
-                <td><a href="{{ path('bug_show', { 'id': bug.id }) }}">{{ bug.id }}</a></td>
-                <td>{{ bug.description }}</td>
-                <td>{% if bug.created %}{{ bug.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ bug.status }}</td>
-                <td>
-                    <a href="{{ path('bug_show', { 'id': bug.id }) }}" class="btn btn-default btn-xs" role="button">show</a>
-                    <a href="{{ path('bug_edit', { 'id': bug.id }) }}" class="btn btn-primary btn-xs" role="button">edit</a>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table table-striped table-hover table-bordered">
+		<thead>
+			<tr>
+				{# ソート可能な一覧を表示する #}
+				<th {% if pagination.isSorted("b.id")%} class="sorted" {% endif %}>
+					{{ knp_pagination_sortable(pagination , "Id" , "b.id") }}
+				</th>
+				<th {% if pagination.isSorted("b.description") %} class="sorted" {% endif %}>
+					{{ knp_pagination_sortable(pagination , "Description" , "b.description") }}
+				</th>
+				<th {% if pagination.isSorted("b.status") %} class="sorted" {% endif %}>
+					{{ knp_pagination_sortable(pagination , "Status" , "b.status") }}
+				</th>
+				<th {% if pagination.isSorted("b.created") %} class="sorted" {% endif %}>
+					{{ knp_pagination_sortable(pagination , "Created" , "b.created") }}
+				</th>
+				<th>Reporter</th>
+				<th>Engineer</th>
+				<th>Products</th>
+				<th>Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for bug in pagination %}
+				<tr>
+					<td>
+						<a href="{{ path('bug_show', { 'id': bug.id }) }}">{{ bug.id }}</a>
+					</td>
+					<td>{{ bug.description }}</td>
+					<td>{{ bug.status }}</td>
+					<td>
+						{% if bug.created %}
+							{{ bug.created|date('Y-m-d H:i:s') }}
+						{% endif %}
+					</td>
+					<td>{{ bug.reporter.name }}</td>
+					<td>{{ bug.engineer.name }}</td>
+					<td>{{ bug.products|join(", ") }}</td>
+					<td>
+						<a href="{{ path('bug_show', { 'id': bug.id }) }}" class="btn btn-default btn-xs" role="button">show</a>
+						<a href="{{ path('bug_edit', { 'id': bug.id }) }}" class="btn btn-primary btn-xs" role="button">edit</a>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+	<div>
+		{# ページ制御のボタン群を表示する #}
+		{{ knp_pagination_render(pagination) }}
+	</div>
 
-    <a href="{{ path('bug_new') }}" class="btn btn-primary" role="button">Create a new entry</a>
+	<a href="{{ path('bug_new') }}" class="btn btn-primary" role="button">Create a new entry</a>
 {% endblock %}
