--- a/app/Resources/views/bug/show.html.twig
+++ b/app/Resources/views/bug/show.html.twig
@@ -1,33 +1,50 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Bug</h1>
+	<h1>Bug</h1>
 
-    <table class="table table-striped table-hover table-bordered">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ bug.id }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ bug.description }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{% if bug.created %}{{ bug.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ bug.status }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table table-striped table-hover table-bordered">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ bug.id }}</td>
+			</tr>
+			<tr>
+				<th>Description</th>
+				<td>{{ bug.description }}</td>
+			</tr>
+			<tr>
+				<th>Created</th>
+				<td>
+					{% if bug.created %}
+						{{ bug.created|date('Y-m-d H:i:s') }}
+					{% endif %}
+				</td>
+			</tr>
+			<tr>
+				<th>Status</th>
+				<td>{{ bug.status }}</td>
+			</tr>
+			<tr>
+				<th>Reporter</th>
+				<td>{{ bug.reporter.name }}</td>
+			</tr>
+			<tr>
+				<th>Engineer</th>
+				<td>{{ bug.engineer.name }}</td>
+			</tr>
+			<tr>
+				<th>Products</th>
+				<td>{{ bug.products|join(", ") }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <hr>
+	<hr>
 
-    <a href="{{ path('bug_index') }}" class="btn btn-default" role="button">Back to the list</a>
-    <a href="{{ path('bug_edit', { 'id': bug.id }) }}" class="btn btn-primary" role="button">Edit</a>
-    {{ form_start(delete_form, {'attr': {'style': 'display: inline'}}) }}
-        <input type="submit" class="btn btn-danger" role="button" value="Delete">
-    {{ form_end(delete_form) }}{% endblock %}
+	<a href="{{ path('bug_index') }}" class="btn btn-default" role="button">Back to the list</a>
+	<a href="{{ path('bug_edit', { 'id': bug.id }) }}" class="btn btn-primary" role="button">Edit</a>
+	{{ form_start(delete_form, {'attr': {'style': 'display: inline'}}) }}
+	<input type="submit" class="btn btn-danger" role="button" value="Delete">
+	{{ form_end(delete_form) }}
+{% endblock %}
