--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -1,25 +1,65 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>User</h1>
+	<h1>User</h1>
 
-    <table class="table table-striped table-hover table-bordered">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ user.name }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table table-striped table-hover table-bordered">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ user.id }}</td>
+			</tr>
+			<tr>
+				<th>Name</th>
+				<td>{{ user.name }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <hr>
+	<hr>
 
-    <a href="{{ path('user_index') }}" class="btn btn-default" role="button">Back to the list</a>
-    <a href="{{ path('user_edit', { 'id': user.id }) }}" class="btn btn-primary" role="button">Edit</a>
-    {{ form_start(delete_form, {'attr': {'style': 'display: inline'}}) }}
-        <input type="submit" class="btn btn-danger" role="button" value="Delete">
-    {{ form_end(delete_form) }}{% endblock %}
+	<h2>Bug List</h2>
+	<table class="table table-striped table-hover table-bordered">
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Description</th>
+				<th>Status</th>
+				<th>Created</th>
+				<th>Reporter</th>
+				<th>Engineer</th>
+				<th>Products</th>
+				<th>Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for bug in bugs %}
+				<tr>
+					<td>
+						<a href="{{ path("bug_show" , { "id" : bug.id }) }}">{{ bug.id }}</a>
+					</td>
+					<td>{{ bug.Description }}</td>
+					<td>{{ bug.status }}</td>
+					<td>
+						{% if bug.created %}
+							{{ bug.created|date("Y-m-d H:i:s") }}
+						{% endif %}
+					</td>
+					<td>{{ bug.reporter.name }}</td>
+					<td>{{ bug.engineer.name }}</td>
+					<td>{{ bug.products|join(", ") }}</td>
+					<td>
+						<a href="{{ path('bug_show', { 'id': bug.id }) }}" class="btn btn-default btn-xs" role="button">show</a>
+						<a href="{{ path('bug_edit', { 'id': bug.id }) }}" class="btn btn-primary btn-xs" role="button">edit</a>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+
+	<a href="{{ path('user_index') }}" class="btn btn-default" role="button">Back to the list</a>
+	<a href="{{ path('user_edit', { 'id': user.id }) }}" class="btn btn-primary" role="button">Edit</a>
+	{{ form_start(delete_form, {'attr': {'style': 'display: inline'}}) }}
+	<input type="submit" class="btn btn-danger" role="button" value="Delete">
+	{{ form_end(delete_form) }}
+{% endblock %}
