--- a/app/Resources/views/bug/show.html.twig
+++ b/app/Resources/views/bug/show.html.twig
@@ -47,4 +47,15 @@
 	{{ form_start(delete_form, {'attr': {'style': 'display: inline'}}) }}
 	<input type="submit" class="btn btn-danger" role="button" value="Delete">
 	{{ form_end(delete_form) }}
+
+	{% if not bug.isClose %}
+		<form action="{{ path('bug_close' , { 'id' : bug.id }) }}" method="post" style="display:inline">
+		{# HTTPのDELETEメソッドを指定 #}
+		<input type="hidden" name="_method" value="PUT"  />
+		{# CSRF対策のトークンを作成 #}
+		<input type="hidden" name="_token" value="{{ csrf_token('close_bug') }}" />
+
+		<input class="btn btn_warning" type="submit" value="Close" />
+		</form>
+	{% endif %}
 {% endblock %}
